--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 ARG JAVA_VERSION=1.8.0
 ARG JAVA_VERSION_DETAIL=${JAVA_VERSION}.191.b12
 ENV JAVA_HOME /usr/lib/jvm/java
+ADD wait-for-it.sh /wait-for-it.sh
 
 RUN yum-config-manager --enable cr && \
     yum -y --setopt=tsflags=nodocs update && \
