--- a/cmservice/Dockerfile
+++ b/cmservice/Dockerfile
@@ -20,4 +20,4 @@ ENV USER=root
 
 EXPOSE 9601
 
-CMD ${INSTALL_ROOT}/cmservice/bin/start.sh
+ENTRYPOINT /wait-for-it.sh mysql:3306 --timeout=5 -- ${INSTALL_ROOT}/cmservice/bin/start.sh
