--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -53,7 +53,7 @@ ssl_verify = false
 ; NOTE: mysql_password MUST be encoded with base64, WITHOUT the trailing carriage-return!
 ; mysql_port = 3306
 mysql_username = CloudInsight
-mysql_password = Q2xvdWR3aXpfcDBj
+mysql_password = Q2xvdWR3aXpfaHVhd2VpX3AwYw==
 ; cmdb_database = CloudwizCMDB
 ; grafana_database = grafana
 ; report_database = report
