hbase 删除 docs 文件夹

--- a/hbase-base/Dockerfile
+++ b/hbase-base/Dockerfile
@@ -13,6 +13,7 @@ RUN set -x \
     && curl -fSL "$HBASE_URL" -o /tmp/hbase.tar.gz \
     && mkdir -p ${INSTALL_ROOT} \
     && tar -xvf /tmp/hbase.tar.gz -C ${INSTALL_ROOT} \
+    $$ rm -rf ${INSTALL_ROOT}/hbase-$HBASE_VERSION/docs
     && rm /tmp/hbase.tar.gz*
 
 RUN ln -s ${INSTALL_ROOT}/hbase-$HBASE_VERSION/conf /etc/hbase
