删除USER=root环境变量

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,9 +1,7 @@
 FROM mysql:5.7.28
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
-ENV USER=root
-
-RUN apt-get update && apt-get install -y procps && apt-get install -y gawk
+#RUN apt-get update && apt-get install -y procps && apt-get install -y gawk
 RUN usermod -s /bin/false mysql && usermod -s /sbin/nologin mysql
 
 ADD mysqld.cnf /etc/mysql/my.cnf
