调整部分服务安装顺序、新增部分加密变量

--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -26,21 +26,21 @@
 ; All these directories MUST be absolute path;
 ;
 ; REQUIRED:
-install_root = "/opt"
-data_root = "/data"
-log_root = "/log"
+install_root = "/opt/cwiz"
+data_root = "/opt/cwiz/data"
+log_root = "/opt/cwiz/logs"
 agent_root = "/opt"
 platform = RedHat
 
 ; OPTIONAL:
 host_ip = "nginx"
-nginx_port = 8080
-; nginx_protocol = http
+nginx_port = 4343
+nginx_protocol = https
 
 ; this will default to nginx_ip
-; nginx_ext_ip = ....
-; nginx_ext_port = 4343
-; nginx_ext_protocol = https
+nginx_ext_ip = 52.82.12.122
+nginx_ext_port = 4343
+nginx_ext_protocol = https
 ; nginx_prefix = cwiz
 
 ; if agent needs to go through external interface, set this to external
@@ -53,7 +53,11 @@ ssl_verify = false
 ; NOTE: mysql_password MUST be encoded with base64, WITHOUT the trailing carriage-return!
 ; mysql_port = 3306
 mysql_username = CloudInsight
-mysql_password = Q2xvdWR3aXpfaHVhd2VpX3AwYw==
+mysql_password = Cloudwiz_p0c
+;mysql_password = Q2xvdWR3aXpfaHVhd2VpX3AwYw==
+secret_key = DBj1X8tVSUnQGfSdbo1LhgzjFPa5yUYA
+ssl_password = Cwiz_123
+ssl_enable = true
 ; cmdb_database = CloudwizCMDB
 ; grafana_database = grafana
 ; report_database = report
@@ -76,22 +80,29 @@ mysql_password = Q2xvdWR3aXpfaHVhd2VpX3AwYw==
 ; This should be where all the tarballs are.
 package_dir = "../.packages"
 token = "0f320e7db4a2d8ba0a3229753bf7c90d821479da"
+local_pkg_dir = "./.local_pkgs"
+local_java_pkg = "OpenJDK8U-jdk_x64_linux_hotspot_8u232b09.tar.gz"
+local_encrypt_jar = "cloudwiz-crypt-1.0-SNAPSHOT-jar-with-dependencies.jar"
 
 [services]
 include = allocate.ini
-
-[tools]
-tarfile = tools.tar.gz
-mkdirs = "cron/cron.hourly, cron/cron.daily, cron/cron.weekly"
-
-[jdk]
-tarfile = jdk-8u152-linux-x64.tar.gz
-updatable = false
 
 ; supervisord needs to be installed before all other services that need it
 [supervisord]
 mkdirs = "altenv/etc/supervisord.d"
 tarfile = supervisord.tar.gz
+
+[jdk]
+tarfile = jdk-8u152-linux-x64.tar.gz
+updatable = false
+
+[alertd]
+mkdirs = "conf/hbase_configs, conf/hdfs_configs"
+tarfile = cloudwiz-daemon.tar.gz
+
+[tools]
+tarfile = tools.tar.gz
+mkdirs = "cron/cron.hourly, cron/cron.daily, cron/cron.weekly"
 
 [jmxtrans]
 mkdirs = "config"
@@ -99,10 +110,6 @@ tarfile = jmxtrans-271-SNAPSHOT-dist.tar.gz
 
 [zookeeper]
 tarfile = zookeeper.tar.gz
-
-[alertd]
-mkdirs = "conf/hbase_configs, conf/hdfs_configs"
-tarfile = cloudwiz-daemon.tar.gz
 
 [cmservice]
 mkdirs = "conf"
