删除mysql密码变量，增加docker宿主机ip变量

--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -42,6 +42,7 @@ nginx_ext_ip = 52.82.12.122
 nginx_ext_port = 4343
 nginx_ext_protocol = https
 ; nginx_prefix = cwiz
+docker_host_int_ip = 172.31.36.22
 
 ; if agent needs to go through external interface, set this to external
 ; agent_scope = internal
@@ -53,8 +54,6 @@ ssl_verify = false
 ; NOTE: mysql_password MUST be encoded with base64, WITHOUT the trailing carriage-return!
 ; mysql_port = 3306
 mysql_username = CloudInsight
-mysql_password = Cloudwiz_p0c
-;mysql_password = Q2xvdWR3aXpfaHVhd2VpX3AwYw==
 secret_key = DBj1X8tVSUnQGfSdbo1LhgzjFPa5yUYA
 ssl_password = Cwiz_123
 ssl_enable = true
