将docker宿主机IP写入证书服务端配置文件

--- a/template/tools/certs/ssl/server.conf
+++ b/template/tools/certs/ssl/server.conf
@@ -17,7 +17,7 @@ extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1 = 172.31.36.22 # change_to_the_real_host_ip
+DNS.1 = <:docker_host_int_ip:> # change_to_the_real_host_ip
 DNS.2 = 172.19.0.1
 DNS.3 = 172.19.0.2
 DNS.4 = 172.19.0.3
@@ -44,7 +44,7 @@ DNS.24 = 172.19.0.23
 DNS.25 = 172.19.0.24
 DNS.26 = 172.19.0.25
 DNS.27 = nginx
-IP.1 = 172.31.36.22 # change_to_the_real_host_ip
+IP.1 = <:docker_host_int_ip:> # change_to_the_real_host_ip
 IP.2 = 172.19.0.1
 IP.3 = 172.19.0.2
 IP.4 = 172.19.0.3
