--- a/template/webfront/conf/defaults.ini
+++ b/template/webfront/conf/defaults.ini
@@ -370,7 +370,7 @@ elk_source_url = <:nginx_ext_protocol:>://<:nginx_ext_ip:>:<:nginx_ext_port:>/<:
 # intranet elk source
 elk_source_urlintranet = <:nginx_protocol:>://<:nginx_ip:>:<:nginx_port:>/_log
 
-#################################### Download Source ####################################
+#################################### Agent Source ####################################
 [agent]
 # default agent source
 agent_urlroot = <:agent_protocol:>://<:agent_ip:>:<:agent_port:>/agent
@@ -382,6 +382,13 @@ root = <:agent_root:>
 download_urlroot = <:nginx_ext_protocol:>://<:nginx_ext_ip:>:<:nginx_ext_port:>
 # intranet download source
 download_urlintranet = <:nginx_protocol:>://<:nginx_ip:>:<:nginx_port:>
+
+#################################### Permission Source ####################################
+[permission]
+# default permission source
+permission_urlroot = <:nginx_ext_protocol:>://<:nginx_ext_ip:>:4123
+# intranet permission source
+permission_urlintranet = <:nginx_protocol:>://<:nginx_ip:>:4123
 
 #################################### Data Center ####################################
 [datacenter]
