--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -32,6 +32,12 @@ log_root = "/opt/cwiz/logs"
 agent_root = "/opt"
 platform = RedHat
 
+; Huawei:
+huawei_url = https//192.168.1.1
+huawei_ak = 123123123
+huawei_sk = 123123123
+nginx_auth_request = "auth_request /auth-proxy;"
+
 ; OPTIONAL:
 host_ip = "nginx"
 nginx_port = 4343
