--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -159,10 +159,27 @@ http {
         }
 
         location /<:nginx_prefix:> {
+            <:nginx_auth_request:>
             proxy_pass https://grafana/;
             proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
+        }
+
+        location /Intelligent/ {
+            auth_request /auth-proxy;
+            proxy_pass https://grafana/;
+            proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
+        }
+
+        location = /auth-proxy {
+            internal;
+            proxy_pass https://permission/huawei/auth
+            proxy_ssl_certificate <:install_root:>/certs/permission/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/permission/ca.crt;
         }
     }
 
