--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -158,6 +158,13 @@ http {
             proxy_ssl_trusted_certificate <:install_root:>/certs/metric-proxy/ca.crt;
         }
 
+        location /<:nginx_prefix:>_permission/ {
+            proxy_pass https://permission/;
+            proxy_ssl_certificate <:install_root:>/certs/permission/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/permission/ca.crt;
+        }
+
         location /<:nginx_prefix:> {
             <:nginx_auth_request:>
             proxy_pass https://grafana/;
@@ -279,6 +286,13 @@ http {
             proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
+        }
+
+        location /_permission/ {
+            proxy_pass https://permission/;
+            proxy_ssl_certificate <:install_root:>/certs/permission/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/permission/ca.crt;
         }
     }
 
