--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -183,7 +183,7 @@ http {
 
         location = /auth-proxy {
             internal;
-            proxy_pass https://permission/huawei/auth
+            proxy_pass https://permission/huawei/auth/;
             proxy_ssl_certificate <:install_root:>/certs/permission/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/permission/ca.crt;
