--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -40,14 +40,14 @@ nginx_auth_request = "auth_request /auth-proxy;"
 
 ; OPTIONAL:
 host_ip = "nginx"
-nginx_port = 4343
+nginx_port = 443
 nginx_protocol = https
 
 ; this will default to nginx_ip
 nginx_ext_ip = 52.82.12.122
 nginx_ext_port = 4343
 nginx_ext_protocol = https
-; nginx_prefix = cwiz
+nginx_prefix = IntelligentAnalysis
 docker_host_int_ip = 172.31.36.22
 
 ; if agent needs to go through external interface, set this to external
