--- a/template/webfront/conf/defaults.ini
+++ b/template/webfront/conf/defaults.ini
@@ -420,7 +420,7 @@ pythond_source_urlintranet = <:nginx_protocol:>://<:nginx_ip:>:8100
 #################################### CSRF ####################################
 [csrf]
 # by default, it will check 'root_url', 'cloudwiz-user url'
-referer_whitelist = <:nginx_protocol:>://<:nginx_ip:>:<:nginx_port:>,<:nginx_ext_protocol:>://<:nginx_ext_ip:>:<:nginx_ext_port:>
+referer_whitelist = <:nginx_protocol:>://<:nginx_ip:>:<:nginx_port:>,<:nginx_ext_protocol:>://<:nginx_ext_ip:>:<:nginx_ext_port:>,<:huawei_url:>
 
 #################################### Cloudops ####################################
 [cloudops]
