--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -188,6 +188,14 @@ http {
             proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/permission/ca.crt;
         }
+
+        location / {
+            auth_request /auth-proxy;
+            proxy_pass https://grafana/;
+            proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
+        }
     }
 
     server {
