1. nginx 加入 _metics 2. log.pp 关掉 ssl 3. alertd 拓扑时间变成 5min

--- a/template/log-pp/config/log.pp.properties
+++ b/template/log-pp/config/log.pp.properties
@@ -53,7 +53,8 @@ Server.timeoutSeconds = 15
 Server.flush.delaySeconds = 5
 Server.config.delaySeconds = 120
 
-Server.ssl.enabled = <:ssl_enable:>
+#Server.ssl.enabled = <:ssl_enable:>
+Server.ssl.enabled = false
 Server.ssl.certificate = <:install_root:>/certs/log-pp/server.crt
 Server.ssl.key = <:install_root:>/certs/log-pp/server.p8
 Server.ssl.ca = <:install_root:>/certs/log-pp/ca.crt
