--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -196,6 +196,13 @@ http {
             proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
         }
+
+        location /_metrics/ {
+            proxy_pass https://metric-proxy/;
+            proxy_ssl_certificate <:install_root:>/certs/metric-proxy/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/metric-proxy/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/metric-proxy/ca.crt;
+        }
     }
 
     server {
