--- a/template/webfront/conf/defaults.ini
+++ b/template/webfront/conf/defaults.ini
@@ -421,6 +421,7 @@ pythond_source_urlintranet = <:nginx_protocol:>://<:nginx_ip:>:8100
 [csrf]
 # by default, it will check 'root_url', 'cloudwiz-user url'
 referer_whitelist = <:nginx_protocol:>://<:nginx_ip:>,<:nginx_ext_protocol:>://<:nginx_ext_ip:>,<:huawei_url:>
+xsrf_whitelist = alertd/reporting
 
 #################################### Cloudops ####################################
 [cloudops]
